--- a/TheVoodooProject/TheVoodooProjectClient/src/app/core/file-uploader/file-uploader.component.html
+++ b/TheVoodooProject/TheVoodooProjectClient/src/app/core/file-uploader/file-uploader.component.html
@@ -1,6 +1,10 @@
-<div class="form-group">
-    <label for="file">Choose File</label>
-    <input type="file"
-           id="file"
-           (change)="handleFileInput($event.target.files)">
-</div>
+<h3>Upload a video file</h3>
+<input #file type="file" multiple (change)="upload(file.files)" />
+<br/>
+<span style="font-weight:bold;color:green;" *ngIf="progress > 0 && progress < 100">
+  {{progress}}%
+</span>
+
+<span style="font-weight:bold;color:green;" *ngIf="message">
+  {{message}}
+</span>
