Added improvents to UI

--- a/TheVoodooProject/TheVoodooProjectClient/src/app/app.component.html
+++ b/TheVoodooProject/TheVoodooProjectClient/src/app/app.component.html
@@ -1,4 +1,1 @@
-<div class="text-center">
-    <button [routerLink]="['/fileUploader']">Upload file</button>
-</div>
-<router-outlet></router-outlet>
+<app-file-uploader></app-file-uploader>
