--- a/TheVoodooProject/TheVoodooProjectClient/src/app/core/file-uploader/file-uploader.component.html
+++ b/TheVoodooProject/TheVoodooProjectClient/src/app/core/file-uploader/file-uploader.component.html
@@ -1,10 +1,8 @@
 <h3>Upload a video file</h3>
 <input #file type="file" multiple (change)="upload(file.files)" />
 <br/>
-<span style="font-weight:bold;color:green;" *ngIf="progress > 0 && progress < 100">
-  {{progress}}%
-</span>
-
-<span style="font-weight:bold;color:green;" *ngIf="message">
+<div style="font-weight:bold;color:green;" *ngIf="message">
   {{message}}
-</span>
+  <br/>
+  <button>Start processing</button>
+</div>
