--- a/TheVoodooProject/TheVoodooProjectClient/src/styles.css
+++ b/TheVoodooProject/TheVoodooProjectClient/src/styles.css
@@ -1,1 +1,3 @@
 @import '~bootstrap/dist/css/bootstrap.min.css';
+@import '@angular/material/prebuilt-themes/indigo-pink.css';
+@import url('https://fonts.googleapis.com/css?family=Roboto');
